--- a/marketplace/venda/style.css
+++ b/marketplace/venda/style.css
@@ -217,6 +217,10 @@
     font-size: small;
 }
 
+.userText{
+    margin: 10px;
+}
+
 #comentariosContainer > .comentarioBox > .likeBox {
     display: flex;
     gap: 10px;
